--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -33,3 +33,8 @@
   .selected {
     border: 2px solid yellow;
   }
+
+  .kingIsInCheck{
+    background-color: rgb(241, 136, 136);
+    border: 2px solid red;
+  }
