--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -1,5 +1,6 @@
 .board {
     position: absolute;
+    z-index: 99;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); /* Transforma el tablero para centrarlo */
