--- a/src/components/GameOver.module.css
+++ b/src/components/GameOver.module.css
@@ -1,13 +1,14 @@
 .container{
-    /* position: absolute;
-    top: 50;
-    left: 50;
-    transform: translate(-50%, -50%); */
+    position: absolute;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
     background-color: aliceblue;
-   
+    border: 1px solid black;
 }
