--- a/src/components/GameOver.module.css
+++ b/src/components/GameOver.module.css
@@ -1,9 +1,6 @@
 .container{
-    position: absolute;
-    z-index: 999;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 300px;
+    height: 150px;
     padding: 2rem;
     display: flex;
     flex-direction: column;
